# ThreatWeaver

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  threatweaver-code-scanning.yml
docs/: architecture.md
examples/: empty-plan.json
src/threatweaver/: cli.py
src/threatweaver/analysis/: attack_paths.py
src/threatweaver/detectors/: __init__.py  open_security_group.py  public_ebs_snapshot.py  public_ec2_instance.py  public_rds_detector.py  public_s3_bucket.py  unencrypted_ebs.py
src/threatweaver/engine/: __init__.py  detector_engine.py
src/threatweaver/findings/: __init__.py  model.py
src/threatweaver/graph/: builder.py  reference_extractor.py  security_graph.py
src/threatweaver/models/: resource.py
src/threatweaver/parsers/: terraform.py
src/threatweaver/report/: __init__.py  report.py
src/threatweaver/sarif/: __init__.py  exporter.py
tests/: test_attack_paths.py  test_cli.py  test_detector_engine.py  test_finding_model.py  test_graph_builder.py  test_open_security_group_detector.py  test_package.py  test_public_ebs_snapshot.py  test_public_ec2_instance_detector.py  test_public_rds_detector.py  test_public_s3_bucket_detector.py  test_reference_extractor.py  test_report.py  test_resource_model.py  test_sarif.py  test_security_graph.py  test_terraform_parser.py  test_terraform_resource_extraction.py  test_unencrypted_ebs.py
